Spacing between question and description (fixes #2149) (#2178)

--- a/src/app/exams/exams-view.scss
+++ b/src/app/exams/exams-view.scss
@@ -16,4 +16,8 @@
       display: flex;
       align-items: center;
   }
+
+  .question-header {
+    margin-bottom: 8px;
+  }
 }
